@@ -2097,7 +2097,7 @@ public class TexturePack {
                             else if(av[0].equals("custColorMult")) {
                                 try {
                                     Class<?> cls = Class.forName(av[1]);
-                                    custColorMult = (CustomColorMultiplier)cls.newInstance();
+                                    custColorMult = (CustomColorMultiplier)cls.getDeclaredConstructor().newInstance();
                                 } catch (Exception x) {
                                     Log.severe("Error loading custom color multiplier - " + av[1] + ": " + x.getMessage());
                                 }
@@ -2263,7 +2263,7 @@ public class TexturePack {
                         else if(av[0].equals("custColorMult")) {
                             try {
                                 Class<?> cls = Class.forName(av[1]);
-                                custColorMult = (CustomColorMultiplier)cls.newInstance();
+                                custColorMult = (CustomColorMultiplier)cls.getDeclaredConstructor().newInstance();
                             } catch (Exception x) {
                                 Log.severe("Error loading custom color multiplier - " + av[1] + ": " + x.getMessage());
                             }
